<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#008585"
    android:gravity="center"
    android:paddingBottom="50dp"
    >
    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:srcCompat="@drawable/vampire"
        android:layout_gravity="center"
        android:contentDescription="@string/app_name"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/color_white"
        android:text="@string/app_title2"
        android:textSize="18sp"
        android:layout_margin="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_sec"
        android:textColor="@color/color_white"
        android:textSize="16sp"
        android:padding="24dp"
        android:justificationMode="inter_word"
        android:gravity="center"/>

</LinearLayout>